fix: make transfer direction icons more visible

--- a/web/src/components/TargetTile.module.scss
+++ b/web/src/components/TargetTile.module.scss
@@ -18,7 +18,7 @@
   }
 
   svg {
-    font-size: 10px;
+    font-size: 16px;
   }
 
   .icons {
